# architect-ai-platform

./: .cursorignore  .env  .env.example  .eslintignore  .gitignore  A1_COMPREHENSIVE_SHEET_SYSTEM.md  A1_MASTER_SHEET_IMPLEMENTATION.md  A1_MODIFICATION_IMG2IMG_COMPLETE.md  A1_MODIFY_IMG2IMG_FIX.md  A1_MODIFY_IMG2IMG_SIZE_FIX_COMPLETE.md  A1_QUALITY_UPGRADE_COMPLETE.md  A1_RESOLUTION_TECHNICAL_SOLUTION.md  A1_SHEET_FIXES_COMPLETE.md  A1_SHEET_GENERATION_FIX.md  A1_SHEET_MODIFICATION_FIXES.md  A1_SHEET_ONE_SHOT_IMPLEMENTATION.md  A1_SITE_PLAN_FIX_COMPLETE.md  A1_STABILIZATION_COMPLETE.md  ACTION_REQUIRED.md  AGENTS.md  ALL_USER_ISSUES_RESOLVED.md  API_DOCUMENTATION.md  API_SETUP.md  AUDIT_FIXES_SUGGESTED.md  AUDIT_REPORT_WORKFLOW_CONSISTENCY.md  ArchiAI_Cost_Model.xlsx  BROWSER_STORAGE_DIAGNOSTIC.js  CLAUDE.md  CLAUDE_TRIMMED.md  CLEAR_DESIGN_HISTORY.html  CLEAR_LARGE_STORAGE.html  CLEAR_STORAGE.html  COMMIT_SUMMARY.md  COMPLETE_PROFESSIONAL_A1_SHEET.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_CODE_AUDIT_2025.md  CONSISTENT_SINGLE_PROJECT_PROMPT.md  CONSOLE_ERRORS_FIXED.md  CONTROLNET_IMPLEMENTATION.md  CONTROLNET_INTEGRATION_COMPLETE.md  (+264 more)
genarch/: .coverage.DESKTOP-M6QEAN2.pid28100.XyuIwCcx  README.md  __init__.py  __main__.py  constraints.example.json  genarch.env.example  pyproject.toml  requirements-dev.in  requirements.in
genarch/docs/: GENARCH_API.md  GENARCH_SETUP.md
genarch/exporters/: json_exporter.py
genarch/genarch/: __main__.py
genarch/generator/: circulation_placer.py
genarch/models/: floor_plan.py
genarch/phase4/: phase4_config.example.json
(+2491 files in other folders)
